Partial_14Dec2021/force-app/main/default/objects/Supply__c/Supply__c.object-meta.xml
<CustomObject>
    <label>Supply</label>
    <nameField>
        <displayFormat>Supply-{00000000}</displayFormat>
        <label>Supply Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>