Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/New_Order__c.field-meta.xml
<CustomField>
    <fullName>New_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be refered to after the project modifications/ revamp</description>
    <label>New Order</label>
    <referenceTo>New_Order__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>