Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/Number_of_SLI__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SLI__c</fullName>
    <label>Number of SLI</label>
    <summaryForeignKey>SupplyLineItem__c.SupplyDetails__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>