Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>