Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/ParentSupplyFlag__c.field-meta.xml
<CustomField>
    <fullName>ParentSupplyFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ParentSupplyFlag</label>
    <type>Checkbox</type>
</CustomField>