Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/Related_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Project_Name__c</fullName>
    <formula>Project__r.Name</formula>
    <label>Related Project Name</label>
    <type>Text</type>
</CustomField>