Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created so that it can be used in joint report of Target Vs Actuals of Project vertical Users.</description>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>