Partial_14Dec2021/force-app/main/default/objects/Supply__c/fields/Total_Supply_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Supply_Value__c</fullName>
    <label>Total Supply Value</label>
    <summarizedField>SupplyLineItem__c.Order_Value__c</summarizedField>
    <summaryForeignKey>SupplyLineItem__c.SupplyDetails__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>